tests/specs/ecosystem/shyce/echo_chamber/0_1_0.test
shyce/echo-chamber/0.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
  public get _internalPingInterval(): NodeJS.Timeout | null {
                                      ~~~~~~
    at file://<tmpdir>/src/EchoChamber.ts:50:39

TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
  public set _internalPingInterval(pingInterval: NodeJS.Timeout | null) {}
                                                 ~~~~~~
    at file://<tmpdir>/src/EchoChamber.ts:53:50

Found 2 errors.

